...
            android:id="@+id/flFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvName">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginEverything"
                android:layout_marginEnd="@dimen/marginEverything"
                android:autofillHints="name"
                android:inputType="text"
...
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvEmail">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginEverything"
                android:layout_marginEnd="@dimen/marginEverything"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress" />
...
                android:id="@+id/frameLayoutCreditCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvCreditCard">

                <EditText
                    android:id="@+id/etCreditCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginEverything"
                    android:layout_marginEnd="@dimen/marginEverything"
                    android:autofillHints="creditCardNumber"
                    android:inputType="phone"
...
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frameLayoutCreditCard" />

            <EditText
                android:id="@+id/etDateOfExpiration"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginEverything"
                android:layout_marginEnd="@dimen/marginEverything"
                android:autofillHints="creditCardExpirationDate"
                android:inputType="date"
...
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/frameLayoutCreditCard" />

            <EditText
                android:id="@+id/etCCV"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="90dp"
                android:autofillHints="creditCardSecurityCode"
                android:inputType="number"
                android:maxLength="3"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginEverything"
                android:text="@string/card_holder_name"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <EditText
                android:id="@+id/etCardHolderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_holder_surname"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <EditText
                android:id="@+id/etCardHolderSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <EditText
                android:id="@+id/etCardHolderAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zip_code"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <EditText
                android:id="@+id/etCardHolderZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <EditText
                android:id="@+id/etCardHolderCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

            <EditText
                android:id="@+id/etCardHolderCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </LinearLayout>

...
