<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave_a_comment_modal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLeaveName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/what_s_your_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@id/tvLeaveName"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvLeaveComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/comment"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLeaveName" />

    <RatingBar
        android:id="@+id/rbComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:min="1"
        android:stepSize="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etLeaveComment" />

    <EditText
        android:id="@+id/etLeaveComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/leave_comment"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLeaveComment" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtnSend"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:text="@string/send_comment"
        android:textSize="11sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rbComment" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtnCancel"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rbComment" />

</androidx.constraintlayout.widget.ConstraintLayout>