...
            android:layout_height="300dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/rvComments"
            app:layout_constraintTop_toBottomOf="@id/mbtnComment" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbtnComment"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/marginEverything"
...
            android:layout_marginStart="10dp"
            android:layout_marginTop="13dp"
            app:layout_constraintStart_toEndOf="@id/spinnerTicketType"
            app:layout_constraintTop_toBottomOf="@id/rvComments" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBuyTicket"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:text="@string/buy_tickets"
            android:textAllCaps="false"
            app:cornerRadius="20dp"
...
